<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/library1"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="289dp"
        android:layout_height="507dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="49dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/signup_details"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signupusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_signup_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="90dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="18sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/sign_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="170dp"
            android:text="@string/pass_word"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_signup_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="160dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="18sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/signRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="240dp"
            android:text="@string/role"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/adminRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="240dp"
            android:text="@string/admin" />

        <RadioButton
            android:id="@+id/userRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="240dp"
            android:text="@string/user" />

        <TextView
            android:id="@+id/signup_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="310dp"
            android:text="@string/mobile"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_signup_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="300dp"
            android:maxLength="10"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/signup_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="380dp"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editSignupEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="370dp"
            android:hint="@string/email_1"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="430dp"
            android:backgroundTint="@color/orange"
            android:textStyle="bold"
            android:text="@string/signup"
            android:textColor="@color/grey" />

    </androidx.cardview.widget.CardView>
</LinearLayout>