<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".book.ViewBookDetails">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/book"
        tools:layout_editor_absoluteY="59dp"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/details_book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_name_1"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="343dp" />

    <TextView
        android:id="@+id/details_book_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_number_1"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="405dp" />

    <TextView
        android:id="@+id/details_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_1"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="474dp" />

    <TextView
        android:id="@+id/details_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_1"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="534dp" />

    <TextView
        android:id="@+id/book_name_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_name_2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="343dp" />

    <TextView
        android:id="@+id/book_number_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_number_2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="405dp" />

    <TextView
        android:id="@+id/quantity_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_2"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="534dp" />

    <TextView
        android:id="@+id/author_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_2"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="474dp" />

</androidx.constraintlayout.widget.ConstraintLayout>