<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/librarymodified"
    android:backgroundTintMode="src_over">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="287dp"
        android:layout_height="323dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="49dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_width="117dp"
            android:layout_height="116dp"
            app:srcCompat="@drawable/books1"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="141dp"
            android:layout_height="86dp"
            android:layout_marginStart="135dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/library_management_system"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/username"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="170dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/user_name_2" />

        <ImageView
            android:id="@+id/user"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="115dp"
            android:layout_marginTop="165dp"
            app:srcCompat="@drawable/user"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="225dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/password_1" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/password_2"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="115dp"
            android:layout_marginTop="215dp"
            app:srcCompat="@drawable/password"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="260dp"
            android:backgroundTint="@color/orange"
            android:text="@string/reset"
            android:textColor="@color/grey" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="260dp"
            android:backgroundTint="@color/orange"
            android:text="@string/login"
            android:textColor="@color/grey" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>
</LinearLayout>