<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/booktexture"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/orange"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="ContentDescription,MissingConstraints" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_book1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/BookListCard"
        android:layout_width="293dp"
        android:layout_height="559dp"
        app:cardBackgroundColor="#e6edef"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="127dp"
            android:layout_height="133dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/addbookicon"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="200dp"
            android:text="@string/book_details"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/bookName"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:layout_marginTop="280dp"
            android:text="@string/book_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextbookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin_start"
            android:layout_marginTop="267dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/bookNo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:layout_marginTop="330dp"
            android:text="@string/book_number"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextbookNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin_start"
            android:layout_marginTop="317dp"
            android:ems="10"
            android:inputType="number"
            android:text=""
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/authorName"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:layout_marginTop="380dp"
            android:text="@string/author_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin_start"
            android:layout_marginTop="367dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="91dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/text_view_margin_start"
            android:layout_marginTop="430dp"
            android:text="@string/quantity"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin_start"
            android:layout_marginTop="417dp"
            android:ems="10"
            android:inputType="number"
            android:text=""
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/addBookButton"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="490dp"
            android:backgroundTint="@color/orange"
            android:text="@string/add_book"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="608dp" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>